bug fix: move form element outside search wrap container and make filter work in all browsers

--- a/app/assets/stylesheets/partials/_search.scss
+++ b/app/assets/stylesheets/partials/_search.scss
@@ -1,6 +1,7 @@
 .search {
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
 	gap: .5rem;
 	margin: 2rem auto;
 
@@ -13,6 +14,8 @@
 	&__wrap {
 		display: flex;
 		justify-content: center;
+		gap: 1rem;
+		margin-bottom: 1rem;
 	}
 
   &__autocomplete {
@@ -57,6 +60,8 @@
 		@include primary-button;
 		
 		box-shadow: $box-shadow;
+		width: fit-content;
+		margin: 0;
 	}
 	
 	&__characteristics, &__offers {
